--- a/chatList.html
+++ b/chatList.html
@@ -27,9 +27,9 @@
         </div>
       </div>
       <div class="menuBot">
-        <div><i class="fa-solid fa-face-smile"></i></div>
-        <div><i class="fa-solid fa-bell"></i></div>
-        <div><i class="fa-solid fa-gear"></i></div>
+        <div class="buttonClick"><i class="fa-solid fa-face-smile"></i></div>
+        <div class="buttonClick"><i class="fa-solid fa-bell"></i></div>
+        <div class="buttonClick"><i class="fa-solid fa-gear"></i></div>
       </div>
     </div>
 
@@ -71,7 +71,7 @@
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div>
-            <h5 class="friendsName">서무돌</h5>
+            <h5 class="friendsName">손흥민</h5>
             <h6 class="previewMsg">휴가는 내일 하루 쓰면되겠다</h6>
           </div>
         </a>
@@ -80,7 +80,7 @@
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div>
-            <h5 class="friendsName">허남준</h5>
+            <h5 class="friendsName">황희찬</h5>
             <h6 class="previewMsg">나가라ㅡㅡ</h6>
           </div>
         </a>
@@ -89,7 +89,7 @@
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div>
-            <h5 class="friendsName">원정용</h5>
+            <h5 class="friendsName">이승우</h5>
             <h6 class="previewMsg">재택?</h6>
           </div>
         </a>
@@ -98,7 +98,7 @@
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div>
-            <h5 class="friendsName">정광철</h5>
+            <h5 class="friendsName">이강인</h5>
             <h6 class="previewMsg">오호?</h6>
           </div>
         </a>
@@ -109,4 +109,5 @@
     src="https://kit.fontawesome.com/787074e497.js"
     crossorigin="anonymous"
   ></script>
+  <script src="JavaScript/buttonClick.js"></script>
 </html>
