--- a/friendList.html
+++ b/friendList.html
@@ -68,7 +68,7 @@
           <img class="userImg" src="img/userImg.jpg" alt="" />
         </div>
         <div class="userName">
-          <h4>박재성</h4>
+          <h4>박지성</h4>
         </div>
       </div>
 
@@ -101,7 +101,7 @@
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
-            <h5>이승환</h5>
+            <h5>이강인</h5>
           </div>
         </a>
       </div>
@@ -112,7 +112,7 @@
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
-            <h5>지수</h5>
+            <h5>정우영</h5>
           </div>
         </a>
       </div>
@@ -126,7 +126,7 @@
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
-            <h5>서무돌</h5>
+            <h5>손흥민</h5>
           </div>
         </a>
         <a class="friendBox" href="chatNew.html">
@@ -134,7 +134,7 @@
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
-            <h5>허남준</h5>
+            <h5>이승우</h5>
           </div>
         </a>
         <a class="friendBox" href="chatNew.html">
@@ -142,7 +142,7 @@
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
-            <h5>원정용</h5>
+            <h5>황희찬</h5>
           </div>
         </a>
         <a class="friendBox" href="chatNew.html">
@@ -150,7 +150,7 @@
             <img class="friendsImg" src="img/userImg.jpg" alt="" />
           </div>
           <div class="friendsName">
-            <h5>정광철</h5>
+            <h5>이강인</h5>
           </div>
         </a>
       </div>
